src/objects/ICCS_Product_Currency__c.object
<CustomObject>
    <description>To be used by the ICCS Administrator to define in which currencies a product is available in a given country.</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Represents the name of the related ICCS Product Country</description>
        <formula>ICCS_Product_Country__r.Country__r.Name</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCS_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Represents a unique code for ICCS currencies</description>
        <label>ICCS Code</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICCS_Product_Country__c</fullName>
        <description>Related ICCS Product Country</description>
        <label>ICCS Product Country</label>
        <referenceTo>ICCS_Product_Country__c</referenceTo>
        <relationshipLabel>ICCS Product Currencies</relationshipLabel>
        <relationshipName>ICCS_Product_Currencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Name of the Product that is related to the ICCS Product Country</description>
        <formula>ICCS_Product_Country__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Represents the state of the currency. Can be &quot;Active&quot; or &quot;Inactive&quot;. By default all currencies are active</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ICCS Product Currency</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>ICCS Product Currency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICCS Product Currencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CurrencyIsMandatory</fullName>
        <active>true</active>
        <description>Ensure the Currency field is filled. Rule created because the Currency field cannot be made mandatory at page layout level.</description>
        <errorConditionFormula>ISPICKVAL( CurrencyIsoCode , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>This field is mandatory. Please select a value.</errorMessage>
    </validationRules>
</CustomObject>